# third-semester

./: README.md
lab1/: main.cpp
lab10/: CMakeLists.txt  SetOfNumbers.cpp  SetOfNumbers.h  input.txt  main.cpp
lab11/: CMakeLists.txt  SetOfNumbers.cpp  SetOfNumbers.h  input.txt  main.cpp
lab12/: CMakeLists.txt  Deque.cpp  Deque.h  ForwardedList.cpp  ForwardedList.h  inp1.txt  inp2.txt  inp3.txt  inp4.txt  main.cpp  size_t.cpp  size_t.h
lab13/: CMakeLists.txt  Except.cpp  Except.h  input.txt  main.cpp
lab2/: CMakeLists.txt  inp1.txt  inp2.txt  main.cpp  output.txt
lab3/: CMakeLists.txt  input.txt  main.cpp  output.txt
lab4/: CMakeLists.txt  input.txt  main.cpp  output.txt
lab5/: CMakeLists.txt  inp1.txt  inp2.txt  inp3.txt  main.cpp  out.txt
lab6/: inp1.txt  inp2.txt  main.cpp  output.txt
lab7/: CMakeLists.txt  main.cpp
lab8/: CMakeLists.txt  main  main.cpp  stringprocessing.cpp  stringprocessing.h
lab9/: CMakeLists.txt  SetOfNumbers.cpp  SetOfNumbers.h  main.cpp
